# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-ipfs-module"
version = "0.0.0"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV module for IPFS protocol support."
#documentation = "https://docs.rs/asimov-ipfs-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-ipfs-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]          # TODO
publish = true

[features]
default = ["all", "cli", "std"]
all = ["tracing"]
cli = ["asimov-module/cli", "std", "dep:clap", "dep:clientele"]
std = ["asimov-module/std", "gofer/std"]
tracing = ["asimov-module/tracing", "clientele?/tracing"]
unstable = []

[dependencies]
asimov-module = { version = "25.0.0-dev.12", default-features = false }
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.7", default-features = false, features = [
    "clap",
    "std",
], optional = true }
gofer = { version = "0.1.8", default-features = false, features = ["ipfs"] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-ipfs-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
